<resources>
    <string name="app_name">Level 5</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="career">career</string>
    <string name="name">name</string>
    <string name="user_photo">User photo</string>
    <string name="tie_username">Username</string>
    <string name="tie_email">Email</string>
    <string name="tie_career">Career</string>
    <string name="tie_phone">Phone</string>
    <string name="tie_address">Address</string>
    <string name="tie_date_of_birth">Date of birth</string>
    <string name="save">save</string>
    <string name="error_wrong_user_data">Please input all the data and choose avatar.</string>
    <string name="profile">Profile</string>
    <string name="address">address</string>
    <string name="message">Message</string>
    <string name="facebook_logo">f</string>
    <string name="insta_logo">in</string>
    <string name="view_contacts">view my contacts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="facebook">facebook_logo</string>
    <string name="linked_in">insta_logo</string>
    <string name="settings">Settings</string>
    <string name="greetings_message">Let\'s get acquainted!</string>
    <string name="login_tip_1">Fill out the profile and go to the application!</string>
    <string name="e_mail_with_hyphen">e-mail</string>
    <string name="password">Password</string>
    <string name="check_box_remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="register_confirm_that">By clicking Register you agree to our Terms and Conditions</string>
    <string name="ask_user_about_acc">Already have an account?</string>
    <string name="google_button">google_button</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="this_mail_using">User with this e-mail is now registered.</string>
    <string name="btn_google_text">Google</string>
    <string name="cancel">Cancel</string>
    <string name="deletedUser">"${user.name} has deleted."</string>
    <string name="home_address">home address</string>
    <string name="my_profile">My Profile</string>
    <string name="my_contacts">My Contacts</string>
    <string name="has_been_deleted">%s has been deleted.</string>

    <string name="request_success">200</string>
    <string name="bad_request">HTTP 400 Bad Request</string>
    <string name="user_unauthorized">HTTP 401 Unauthorized</string>
    <string name="tag_add_contact">AddContact</string>
    <string name="add_to_my_contacts">add to my contacts</string>
    <string name="toast_server_not_response">The server is not responding, please try again.</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="sign_up_extended_user_name">User name</string>
    <string name="sign_up_extended_mobile_phone">Mobile phone</string>
    <string name="sign_in_extended_forward">Forward</string>

    <!--For working with API-->
    <string name="access_token" translatable="false">accessToken</string>
    <string name="refresh_token" translatable="false">refreshToken</string>
    <string name="currentRequestStatus" translatable="false">currentCode</string>
    <string name="token_bearer" translatable="false">"Bearer "</string>
    <string name="id" translatable="false">id</string>
    <string name="api_preferences_name" translatable="false">token</string>
    <string name="current_user_id" translatable="false">currentUserId</string>

    <!--Not translatable-->
    <string name="argument_contacts_to_contact_profile" translatable="false">user</string>
    <string name="users" translatable="false">Users</string>
    <string name="email" translatable="false">e_mail</string>
    <string name="incorrect_password" translatable="false">Incorrect password</string>
    <string name="selection_id" translatable="false">selection</string>

</resources>