<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="activity.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_greetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings_message"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_top" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_loginTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login_tip_1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_greetingMessage" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mid"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_mid"
            android:autofillHints="emailAddress"
            android:backgroundTint="?attr/colorOnSecondary"
            android:hint="@string/e_mail_with_hyphen"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/minHeight"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_loginTip" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mid"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_mid"
            android:autofillHints="password"
            android:backgroundTint="?attr/colorOnSecondary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="@dimen/minHeight"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mid"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/check_box_remember_me"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <com.example.myapplication.customView.GoogleButtonView
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_height_google_btn"
            android:layout_marginStart="@dimen/margin_mid"
            android:layout_marginTop="@dimen/margin_100dp"
            android:layout_marginEnd="@dimen/margin_mid"
            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/margin_large"
            app:layout_constraintBottom_toTopOf="@id/btn_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_google" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="@dimen/minHeight"
            android:layout_marginStart="@dimen/margin_mid"
            android:layout_marginEnd="@dimen/margin_mid"
            android:backgroundTint="@color/no_color"
            android:foreground="@drawable/frame_rounding_color_secondary"
            android:outlineAmbientShadowColor="@color/no_color"
            android:outlineSpotShadowColor="@color/no_color"
            android:text="@string/register"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_regConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_or" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_regConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/register_confirm_that"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/mid_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registration" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_didHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_user_about_acc"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/mid_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in"
            app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_didHaveAcc"
            app:layout_constraintTop_toBottomOf="@+id/tv_regConfirm"
            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/signUpExtended"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>